# PyPMAnalyzer

./: .gitignore  LICENSE  README.md  __init__.py  debugimport.py  initialtest.py  ppma_load_trials.py  ppma_pipeline.py  pyproject.toml  setup.py  test_pmanalyzer.py  visualize.py
animation/: __init__.py  animator_2d.py  animator_comparison.py  marker_sets.py  plot_utils.py  styles.py
core/: derivatives.py  pca.py
examples/: README.md  animation_trials.ipynb  basic_example.py  multi_directory_loading_examples.py  trials_config.json  trials_config.yaml
metrics/: kinematic.py
pypmanalyzer/: __init__.py  ppma_core.py  ppma_marker_setup_helper.py  pyproject.toml
pypmanalyzer/animation/: core.py  reconstruction.py
pypmanalyzer/core/: preprocessor.py
pypmanalyzer/io/: readers.py
pypmanalyzer/metrics/: control.py
